<resources>
    <string name="app_name">SemDim</string>
    <!-- LoginActivity strings -->
    <string name="tb_username_hint">E-mail</string>
    <string name="tb_password_hint">Senha</string>
    <string name="btn_login_text">Logar</string>
    <string name="btn_facebook_login_hint">Login com o Facebook</string>
    <string name="tv_cadastre_se_text">Ainda não possui conta? Clique aqui e cadastre-se!</string>
    <!-- CadastroUsuarioActivity strings -->
    <string name="tb_user_name_hint">Seu nome</string>
    <string name="tb_cadastro_email">Seu e-mail</string>
    <string name="tb_cadastro_senha">Sua senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="empty_username_password_edittext">Usuário/senha inválidos</string>
    <string name="sucesso_cadastro">Cadastro realizado com sucesso</string>
    <string name="falha_cadastro">Erro ao realizar o cadastro</string>
    <!-- LoginActivity -->
    <string name="falha_login_message">Erro ao realizar o login</string>
    <!-- menu_main.xml -->
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_add_new_contact">Adicionar novo contato</string>
    <string name="action_add_new_group">Adicionar novo grupo</string>
    <!-- menu_cadastrar_grupo.xml -->
    <string name="action_cadastrar_grupo">Cadastrar</string>
    <!-- lista_grupos.xml -->
    <string name="nome_grupo_tv">Nome do Grupo</string>
    <string name="valor_grupo_tv">R$ 0.00</string>
    <!-- lista_contatos.xml -->
    <string name="nome_contato_tv">Nome do contato</string>
    <string name="valor_contato_tv">Eu tenho R$ 0.00</string>
    <!-- lista_estabelecimentos.xml -->
    <string name="nome_estabelecimento_tv">Nome do estabelecimento</string>
    <string name="valor_promocao_textview">Promoções a partir de R$ 30.00</string>
    <string name="valor_promocao_vazio_textview">Promoções a partir de R$ </string>
    <!-- Fragments -->
    <string name="grupos_fragment_title">Grupos</string>
    <string name="grupos_empty_listview">Nenhum grupo encontrado</string>
    <string name="contato_fragment_title">Contatos</string>
    <string name="contato_empty_listview">Nenhum contato encontrado</string>
    <string name="estabelecimento_fragment_title">Estabelecimentos</string>
    <string name="estabelecimento_empty_listview">Nenhum estabelecimento cadastrado</string>
    <!-- MainActivity -->
    <string name="main_activity_new_contact_alertdialog_title">Novo contato</string>
    <string name="main_activity_new_contact_alertdialog_message">Email do contato:</string>
    <string name="main_activity_cadastrar_button">Cadastrar</string>
    <string name="main_activity_new_contact_empty_edittext">Email do contato inválido</string>
    <string name="main_activity_new_contact_success">Contato adicionado</string>
    <string name="main_activity_new_contact_fail">Contato não encontrado</string>
    <!--CadastroGrupoActivity -->
    <string name="cadastrogrupoactivity_title">Cadastrar Grupo</string>
    <string name="nome_grupo_edittext_hint">Nome do grupo</string>
    <string name="contatos_grupo_textview">Contatos cadastrados</string>
    <string name="criar_grupos_button">Criar</string>
    <string name="nome_grupo_invalido">Nome do grupo inválido</string>
    <string name="nenhum_contato_selecionado">Nenhum contato selecionado</string>
    <string name="cadastrar_grupo_sucesso">Grupo criado com sucesso</string>
    <string name="cadastrar_grupo_falha">Falha ao criar grupo</string>
    <!-- Estabelecimento Activity -->
   <string name="estabelecimento_activity_title">Estabelecimento</string>
    <string name="nome_estabelecimento_textview">Nome do estabelecimento</string>
    <string name="endereco_estabelecimento_textvew">Endereço do estabelecimento</string>
    <string name="nome_promocao_textiview">Nome da promoção</string>
    <string name="descricao_promocao_textview">Descricao da promoção</string>
    <string name="preco_promocao_textview">Preço: R$ 100.00s</string>
    <string name="btn_comprar">Comprar</string>
    <string name="compra_efetuada_sucesso">Oba! Compra efetuada com sucesso!</string>
    <string name="simbolo_moeda">R$ </string>

    <!-- Facebook API Login -->
    <string name="facebook_app_id">309144506557358</string>
    <string name="fb_login_protocol_scheme">fb309144506557358</string>


</resources>
